--- a/doc/todo/running___96__find_.__96___in___47___prints_warnings.mdwn
+++ b/doc/todo/running___96__find_.__96___in___47___prints_warnings.mdwn
@@ -1,4 +1,4 @@
-I am trying to make etckeeper track /etc and another folder in `/`.
+I am trying to make etckeeper track `/etc` and another folder in `/`.
 
 However the script 20-warn-problem-files reports many errors like
 
@@ -9,4 +9,4 @@ However the script 20-warn-problem-files reports many errors like
   find: `./proc/7010/task/7010/fdinfo/5': No such file or directory
   find: `./proc/7010/task/7010/fdinfo/5': No such file or directory
 
-Due to files in /proc being created and deleted file find is running.
+Due to files in `/proc` being created and deleted while `find` is running.
