--- a/doc/todo/running___96__find_.__96___in___47___prints_warnings.mdwn
+++ b/doc/todo/running___96__find_.__96___in___47___prints_warnings.mdwn
@@ -1,6 +1,6 @@
 I am trying to make etckeeper track `/etc` and another folder in `/`.
 
-However the script 20-warn-problem-files reports many errors like
+However the script `20-warn-problem-files` reports many errors like
 
     find: `./proc/7010/task/7010/fd/5': No such file or directory
     find: `./proc/7010/task/7010/fd/5': No such file or directory
