--- a/doc/todo/running___96__find_.__96___in___47___prints_warnings.mdwn
+++ b/doc/todo/running___96__find_.__96___in___47___prints_warnings.mdwn
@@ -10,3 +10,6 @@ However the script `20-warn-problem-files` reports many errors like
     find: `./proc/7010/task/7010/fdinfo/5': No such file or directory
 
 Due to files in `/proc` being created and deleted while `find` is running.
+
+
+I am not sure why `find` needs to run at all, when instead one could analyze the output of git ls-files and see if any of those files are problematic.
