--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ etckeeper (1.18.6) UNRELEASED; urgency=medium
   * Only show errors (no progress indicators) when pushing Git/Mercurial repos
     to avoid unncessary cron mails.
     Thanks, Nils Steinger.
+  * Fix regex in 20-warn-problem-files.
 
  -- Joey Hess <id@joeyh.name>  Mon, 01 Aug 2016 13:29:54 -0400
 
