--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-etckeeper (1.18.6) UNRELEASED; urgency=medium
+etckeeper (1.18.6) unstable; urgency=medium
 
   * Only show errors (no progress indicators) when pushing Git/Mercurial repos
     to avoid unncessary cron mails.
@@ -7,7 +7,7 @@ etckeeper (1.18.6) UNRELEASED; urgency=medium
   * Added support for apk (alpine linux)
     Thanks, Henrik Riomar.
 
- -- Joey Hess <id@joeyh.name>  Mon, 01 Aug 2016 13:29:54 -0400
+ -- Joey Hess <id@joeyh.name>  Sun, 29 Jan 2017 14:37:24 -0400
 
 etckeeper (1.18.5) unstable; urgency=medium
 
