--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+etckeeper (1.18.7) UNRELEASED; urgency=medium
+
+  * Added some unit tests.
+    Thanks, Henrik Riomar.
+
+ -- Joey Hess <id@joeyh.name>  Mon, 10 Apr 2017 10:32:53 -0400
+
 etckeeper (1.18.6) unstable; urgency=medium
 
   * Only show errors (no progress indicators) when pushing Git/Mercurial repos
