--- a/doc/todo/make_Perl_optional.mdwn
+++ b/doc/todo/make_Perl_optional.mdwn
@@ -15,3 +15,5 @@ Thanks,
 
 this change replaces:
  https://etckeeper.branchable.com/todo/remove_remaining_perl_usage/
+
+> merge [[done]] thank you! --[[Joey]]
