--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ etckeeper (1.18.7) UNRELEASED; urgency=medium
   * etckeeper will work on systems that do not have perl installed.
     (perl is still used when available as it's faster)
     Thanks, William Johansson and radhus.
+  * Prevent LC_ALL overriding the LC_COLLATE used to sort metadata.
 
  -- Joey Hess <id@joeyh.name>  Mon, 10 Apr 2017 10:32:53 -0400
 
