--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-etckeeper (1.18.7) UNRELEASED; urgency=medium
+etckeeper (1.18.7) unstable; urgency=medium
 
   * Added some unit tests.
     Thanks, Henrik Riomar.
@@ -7,7 +7,7 @@ etckeeper (1.18.7) UNRELEASED; urgency=medium
     Thanks, William Johansson and radhus.
   * Prevent LC_ALL overriding the LC_COLLATE used to sort metadata.
 
- -- Joey Hess <id@joeyh.name>  Mon, 10 Apr 2017 10:32:53 -0400
+ -- Joey Hess <id@joeyh.name>  Thu, 08 Jun 2017 12:58:20 -0400
 
 etckeeper (1.18.6) unstable; urgency=medium
 
