Work around git commit's lack of robustness, by providing reasonable default values for GIT_COMMITTER_EMAIL etc.
This was already done as part of the su/sudo handling, and is now always
done.

This commit was sponsored by Trenton Cronholm on Patreon.

--- a/doc/todo/requires___96__user.email__96___be_set_under_undocumented_circumstances.mdwn
+++ b/doc/todo/requires___96__user.email__96___be_set_under_undocumented_circumstances.mdwn
@@ -34,3 +34,5 @@ This is not Ansible-specific: the last two conditions will also arise in the dai
 
 
 IMO, considering how to document this behaviour shows it to be user-unfriendly.  Therefore, it would be simplest if etckeeper could fall back to using `$(id -un)`, once `$(tty)` fails.
+
+> Set `USER=$(whoami)`, for git only. [[done]] --[[Joey]]
