--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+etckeeper (1.18.8) UNRELEASED; urgency=medium
+
+  * Work around git commit's lack of robustness, by providing
+    reasonable default values for GIT_COMMITTER_EMAIL etc.
+    This was already done as part of the su/sudo handling,
+    and is now always done.
+
+ -- Joey Hess <id@joeyh.name>  Thu, 08 Jun 2017 13:22:01 -0400
+
 etckeeper (1.18.7) unstable; urgency=medium
 
   * Added some unit tests.
