Correct spelling mistake.

--- a/doc/README.mdwn
+++ b/doc/README.mdwn
@@ -184,7 +184,7 @@ run "etckeeper init" to update file permissions.)
 	-lp:x:7:cupsys
 	+lp:x:7:
 
-Incidentially, this also means I have a backup of dodo's /etc on darkstar.
+Incidentally, this also means I have a backup of dodo's /etc on darkstar.
 So if darkstar is compromised, that data could be used to attack dodo
 too. On the other hand, if dodo's disk dies, I can restore it from this
 handy backup.
