--- a/doc/todo/push_remote_branch.mdwn
+++ b/doc/todo/push_remote_branch.mdwn
@@ -9,4 +9,4 @@ I think that adding `PUSH_REMOTE` was a mistake. It would be better to
 remove it, and add to the readme an example of writing your own
 `/etc/etckeeper/commit.d/99push` script that does exactly the kind of
 pushing you want. The only reason I've not done so is it would break
-compatability for anyone using this feature. --[[Joey]]
+compatibility for anyone using this feature. --[[Joey]]
