--- a/doc/todo/push_remote_branch.mdwn
+++ b/doc/todo/push_remote_branch.mdwn
@@ -10,3 +10,7 @@ remove it, and add to the readme an example of writing your own
 `/etc/etckeeper/commit.d/99push` script that does exactly the kind of
 pushing you want. The only reason I've not done so is it would break
 compatibility for anyone using this feature. --[[Joey]]
+
+> Well, there was no point in it hardcoding master. `git push origin` will
+> push whatever branches you've configured git to push. So, made that
+> change, which I think is sufficient. [[done]] --[[Joey]]
