--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+etckeeper (1.18.10) UNRELEASED; urgency=medium
+
+  * Avoid post-install failing when ps is from busybox or another
+    version not supporting procps-specific options.
+  * Use ps --no-headers rather than problimatic -h option.
+
+ -- Joey Hess <id@joeyh.name>  Sun, 23 Dec 2018 13:01:28 -0400
+
 etckeeper (1.18.9) unstable; urgency=medium
 
   * When run during a package installation, include in the commit
