--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+etckeeper (1.18.11) UNRELEASED; urgency=medium
+
+  * Support platforms without a hostname command, fall back to 
+    reading /etc/hostname.
+    Thanks, Chris Morgan
+
+ -- Joey Hess <id@joeyh.name>  Thu, 17 Oct 2019 10:13:46 -0400
+
 etckeeper (1.18.10) unstable; urgency=medium
 
   * Avoid post-install failing when ps is from busybox or another
