fix portability breakage
commit: Recent changes added code that does not work on all POSIX shells.
Fixed by Thorsten Glaser.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ etckeeper (1.18.13) UNRELEASED; urgency=medium
 
   * Added zsh completion.
     Thanks, James Rowe
+  * commit: Recent changes added code that does not work on all POSIX shells.
+    Fixed by Thorsten Glaser.
 
  -- Joey Hess <id@joeyh.name>  Fri, 13 Dec 2019 09:17:48 -0500
 
