Use "command -v" rather than "which" to detect installed programs, as it is more portable. Thanks, Eli Schwartz.

--- a/doc/todo/Use_portable_command_-v.mdwn
+++ b/doc/todo/Use_portable_command_-v.mdwn
@@ -24,3 +24,5 @@ Eli Schwartz (1):
  vcs.d/50vcs-cmd                 | 2 +-
  7 files changed, 9 insertions(+), 9 deletions(-)
 ```
+
+> [[done]] --[[Joey]]
