--- a/doc/todo/running___96__find_.__96___in___47___prints_warnings.mdwn
+++ b/doc/todo/running___96__find_.__96___in___47___prints_warnings.mdwn
@@ -13,3 +13,10 @@ Due to files in `/proc` being created and deleted while `find` is running.
 
 
 I am not sure why `find` needs to run at all, when instead one could analyze the output of git ls-files and see if any of those files are problematic.
+
+> Using etckeeper to track all of `/` is not a supported use case.
+> You're free to try to use etckeeper that way, but when it breaks, you get
+> to modify it to work yourself, and it seems unlikely that the resulting
+> patches would be suitable to be applied to etckeeper. 
+>
+> So [[wontfix|done]], sorry. --[[Joey]]
