finally applied an old patch

--- a/doc/todo/Detailed_post-install_commit_messages.mdwn
+++ b/doc/todo/Detailed_post-install_commit_messages.mdwn
@@ -7,3 +7,5 @@ I find it useful on large system updates, when the package list gets long and co
 I have to note that I don't use package managers other than apt/rpm or vcs other than git on regular basis, so it would be useful if someone with more experience on those takes a look at mercurial/bazaar/darcs and pacman/pkgng implementations of the functions.
 
 Patch for the post-install.d/50vcs-commit file is available at: <https://gist.github.com/emkael/364f701a5342978e6e79c2368b905565>
+
+> [[done]] --[[Joey]]
