--- a/doc/todo/automatic_git_gc.mdwn
+++ b/doc/todo/automatic_git_gc.mdwn
@@ -2,3 +2,5 @@ Hi
 
 You should add so it runs "git gc" automatic.
 I know I can add it manually but better if its included
+
+> [[done]] --[[Joey]]
