update-ignore: Preserve existing permissions
If there is an existing VCS ignore file, preserve its permissions and
ownership.

Previously, a preexisting VCS ignore file would have its permissions and
ownership forced to be the defaults applied by `tempfile` or `mktemp`
when they create files. On the other hand, in the case of no preexisting
VCS ignore file, `etckeeper update-ignore` would write a file with
permissions set by the active umask.

This inconsistency would commonly result in excess fluctuation in the
commit history, as the initial update-ignore run during `etckeeper init`
(see init.d/50vcs-ignore) would create a file with 0644 permissions, but
then the next update-ignore would change the permissions to 0600.

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ etckeeper (1.18.15) UNRELEASED; urgency=medium
     Thanks to emkael for the patch.
   * If gc.auto is not configured, override the default to make it gc
     ten times more frequently, to avoid wasting space with loose objects.
+  * update-ignore: Preserve permissions from any preexisting VCS ignore file.
+    Thanks, Austin Chu.
 
  -- Joey Hess <id@joeyh.name>  Fri, 24 Apr 2020 13:05:59 -0400
 
