releasing package etckeeper version 1.18.16

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,11 +1,11 @@
-etckeeper (1.18.16) UNRELEASED; urgency=medium
+etckeeper (1.18.16) upstream; urgency=medium
 
   * Improve sorting stability.
   * Prefer mktemp over tempfile as the latter displays a deprecation
     warning since debianutils 4.10.
     Thanks, Luke Mlsna.
 
- -- Joey Hess <id@joeyh.name>  Mon, 23 Nov 2020 13:37:05 -0400
+ -- Joey Hess <id@joeyh.name>  Sat, 02 Jan 2021 11:31:23 -0400
 
 etckeeper (1.18.15) upstream; urgency=medium
 
