Ignore udev's FHS violating large binary cache file /etc/udev/hwdb.bin
On debian it is not present by default there but in /lib/udev/hwdb.bin,
but I think it gets created if /etc/udev/hwdb.d/ has files added to it;
see hwdb(7).

This file is a FHS violation because /etc is for configuration. It boggles
my mind that udev willfully violates the FHS. Shame. Shame. Shame.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+etckeeper (1.18.17) UNRELEASED; urgency=medium
+
+  * Ignore udev's FHS violating large binary cache file /etc/udev/hwdb.bin
+
+ -- Joey Hess <id@joeyh.name>  Sun, 17 Oct 2021 09:45:48 -0400
+
 etckeeper (1.18.16) upstream; urgency=medium
 
   * Improve sorting stability.
