--- a/doc/forum/How_would_I_rebase_all_commits_older_than_two_weeks__63__.mdwn
+++ b/doc/forum/How_would_I_rebase_all_commits_older_than_two_weeks__63__.mdwn
@@ -17,3 +17,38 @@ So, in a nutshell:
 
 Thanks!
 
+---
+# 2021-11-04
+Ok, I'm back, I think I've found a solution:
+
+```
+git checkout master   # To make sure you're where you think you are
+root_commit=$(git rev-list --max-parents=0 HEAD)
+git log --before "2 weeks ago" -1    # See the commit id and check the date is suitable, don't continue until you're happy
+
+git rebase -i $root_commit   # Starts an editor with a list of every commit since the dawn of time, oldest at the top, latest at the bottom
+```
+In the editor, change 'pick' to 'squash' for every commit **except**:
+
+   * the first (it'll generate an error if you try, as there's nothing to squash it into)
+   * the one you found with 'git log', above
+   * and all the commits after that
+
+After that, run `git gc`; it should clear out all the now-unused commits that were squashed.
+
+To emulate weekly/monthly backups, use that `git log --before "X weeks/months ago" -1` command to find the commits, and then leave them as 'pick' (not 'squash') during the rebase!  :-)
+
+Cautions:
+
+* This worked for me, but may not work for you.  (YMMV)
+* Copy /etc to another directory for experimentation.
+* Back up /etc before you do it for real.
+* If you break it, you get to keep both pieces!
+
+Good luck!
+
+References:
+
+* https://git-scm.com/book/en/v2/Git-Tools-Rewriting-History
+* https://git-scm.com/docs/git-rebase
+* https://www.cloudbees.com/blog/git-squash-how-to-condense-your-commit-history
