--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@ etckeeper (1.18.18) UNRELEASED; urgency=medium
 
   * Replace deprecated egrep with grep -E.
     Thanks, Sam James
+  * Added support for Void Linux's xbps package manager.
+    Thanks, Zev Weiss.
 
  -- Joey Hess <id@joeyh.name>  Wed, 18 May 2022 12:50:08 -0400
 
